# test-ai

./: .gitignore  Makefile  Makefile.Linux  Makefile.Windows  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: .env.example  chat_with_history.py  embed.py  evaluate.py  main.py  test-import-coman.py  test-import-vivo.py  test-pdf-loader.py
app/api/: chat.py  init_services.py  main.py  retrieval_augmented_generation.py  search.py  search_in_vector_store.py
app/chat/: CustomAzureSearchVectorStoreRetriever.py  chat_state.py  chat_with_history.py  coman_schemes.py  conversational_rag_chain.py  write_email.py
app/coman/: ComanLoader.py  PDFLoader.py
app/evaluation/: evaluation_data.csv  evaluation_results_20240605_130825.csv
app/evaluation/evaluation_results/20240605_144223/: Criteria.CORRECTNESS.csv
app/evaluation/evaluation_results/20240605_144326/: Criteria.CORRECTNESS.csv
app/evaluation/evaluation_results/20240605_145048/: Criteria.CONCISENESS.csv  Criteria.CORRECTNESS.csv
app/tools/: search.py  test-tools.py  write_email.py
app/vivo/: VivoLoader.py
discovery/: .env.example  chat_functionality.ipynb  chat_with_history.ipynb  clear_index.ipynb  coman_load_actua.ipynb  read_mail.ipynb
